--- a/src/meetup-home.html
+++ b/src/meetup-home.html
@@ -125,7 +125,7 @@
 					<div class="main-detail">
 						<h1 class="underline">Where are we meeting?</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus eos vero, dolorum, nobis repellat sunt incidunt aliquid laborum ea reprehenderit hic, possimus. Aliquid quisquam enim reiciendis, quos doloremque sapiente doloribus?
+							Keep track of all your meet-up events in one place, from anywhere in the world. Let's Meetup is simple and straightforward, allowing you to spend less time on planning and managing your event, and more time on getting back to your life. 
 						</p>
 						<div>
 							<a href="/events" tabindex="-1">
@@ -141,7 +141,7 @@
 					<div class="subdetail">
 						<h1 class="underline">All the cool kids are doing it</h1>
 							<p class="light">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed veniam, aliquam velit sunt ullam inventore repudiandae fugit voluptate. Illo facilis adipisci veritatis consequatur minima. Perferendis necessitatibus tempore, animi quis velit.
+								Haven't you heard? Let's Meetup is the greatest! Forget using an existing mature and proven online platform for managing your events. Use a brand new relatively unknown app, and trust someone you don't know with your information!
 							</p>
 							<div>
 								<a href="/signup" tabindex="-1">
@@ -152,7 +152,7 @@
 					<div class="subdetail">
 						<h1 class="underline">You're already a cool kid</h1>
 							<p class="light">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed veniam, aliquam velit sunt ullam inventore repudiandae fugit voluptate. Illo facilis adipisci veritatis consequatur minima. Perferendis necessitatibus tempore, animi quis velit.
+								Yeah, you already know just how awesome this app is. So what are you doing on the home page? You're not new to this; sign in and get back to your events! Who knows what's changed since you've last been here.
 							</p>
 							<div>
 								<a href="/signin" tabindex="-1">
