--- a/src/meetup-signup.html
+++ b/src/meetup-signup.html
@@ -12,6 +12,11 @@
 				background-color: var(--light-gray);
 			}
 
+			form {
+				background-color: var(--light-gray);
+				padding: 0 0 60px 0;
+			}
+
 			meetup-section {
 				margin: 0 80px;
 			}
@@ -96,6 +101,14 @@
 						pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
 						invalid="{{signupPass}}">
 					</paper-input>
+					<paper-input
+						label="Job Title (optional)"
+						value="{{jobTitle}}">
+					</paper-input>
+					<paper-input
+						label="Profile Image URL (optional)"
+						value="{{image}}">
+					</paper-input>
 				</meetup-section>
 			</section>
 
@@ -128,6 +141,16 @@
 				notify: true
 			},
 			password: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			jobTitle: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			image: {
 				type: String,
 				value: '',
 				notify: true
@@ -174,7 +197,14 @@
 		],
 
 		signUp: function(e, detail) {
-			this.fire('sign-up', {firstname: this.firstname, lastname: this.lastname, email: this.email, password: this.password}, {bubbles: false});
+			this.fire('sign-up', {
+				firstname: this.firstname,
+				lastname: this.lastname,
+				email: this.email,
+				password: this.password,
+				job: this.jobTitle,
+				image: this.image
+			}, {bubbles: false});
 		},
 
 		_compareRoute: function(page) {
