--- a/src/meetup-event-editor.html
+++ b/src/meetup-event-editor.html
@@ -1,3 +1,12 @@
+<!-- 
+
+EVENT EDITOR FORM
+
+A dialog box similiar to the new-event component, allowing signed-in users to edit or delete existing events.
+For reference, this component's structure and functionality is almost the exact same as the new-event component. The two don't share a common component only because I found separating the two easier to organize and manage during development, however there is definitely opportunity for proper componentization.
+
+ -->
+
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
