--- a/src/meetup-home.html
+++ b/src/meetup-home.html
@@ -1,3 +1,11 @@
+<!-- 
+
+HOME VIEW
+
+This is the default view, serving as a landing page.
+
+ -->
+
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
