--- a/src/meetup-section.html
+++ b/src/meetup-section.html
@@ -1,3 +1,11 @@
+<!-- 
+
+CENTERED SECTION
+
+A general use section component which centers content horizontally and vertically with flexbox, allowing content to wrap when necessary.
+
+ -->
+
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 
