--- a/src/meetup-event.html
+++ b/src/meetup-event.html
@@ -1,3 +1,11 @@
+<!-- 
+
+EVENT CARD
+
+Displays an event and its information. Details are organized as a material design card, and each event is editable by signe-in users.
+
+ -->
+
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animation-runner-behavior.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-in-animation.html">
@@ -139,6 +147,7 @@
 			this.playAnimation('entry');
 		},
 
+		// An open event for the event-editor, supplying this event's information
 		openEvent: function(e, detail) {
 			this.fire('open', {
 				eventTitle: this.eventTitle,
