--- a/src/meetup-title.html
+++ b/src/meetup-title.html
@@ -1,3 +1,11 @@
+<!-- 
+
+TITLE HEADER
+
+A reusable component for a view's header.
+
+ -->
+
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 
