--- a/src/meetup-user-card.html
+++ b/src/meetup-user-card.html
@@ -1,3 +1,11 @@
+<!-- 
+
+USER INFO CARD
+
+Similiar to the event component, this provides more info about the currently signed-in user.
+
+ -->
+
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animation-runner-behavior.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-in-animation.html">
