--- a/src/meetup-home.html
+++ b/src/meetup-home.html
@@ -68,11 +68,6 @@ This is the default view, serving as a landing page.
 				color: white;
 			}
 
-			.btn {
-				background-color: #1e88e5;
-				color: #fff;
-			}
-
 			a {
 				text-decoration: none;
 			}
@@ -137,7 +132,7 @@ This is the default view, serving as a landing page.
 						</p>
 						<div>
 							<a href="/events" tabindex="-1">
-								<paper-button class="btn" raised>View Events</paper-button>
+								<paper-button raised>View Events</paper-button>
 							</a>
 						</div>
 					</div>
@@ -153,7 +148,7 @@ This is the default view, serving as a landing page.
 							</p>
 							<div>
 								<a href="/signup" tabindex="-1">
-									<paper-button class="btn" raised>Sign Up</paper-button>
+									<paper-button raised>Sign Up</paper-button>
 								</a>
 							</div>
 					</div>
@@ -164,7 +159,7 @@ This is the default view, serving as a landing page.
 							</p>
 							<div>
 								<a href="/signin" tabindex="-1">
-									<paper-button class="btn" raised>Sign In</paper-button>
+									<paper-button raised>Sign In</paper-button>
 								</a>
 							</div>
 					</div>
