--- a/src/meetup-event-editor.html
+++ b/src/meetup-event-editor.html
@@ -26,13 +26,8 @@ For reference, this component's structure and functionality is almost the exact 
 				overflow: scroll;
 			}
 
-			.long-detail {
+			.detail {
 				width: 200px;
-				display: inline-block;
-			}
-
-			.short-detail {
-				width: 100px;
 				display: inline-block;
 			}
 
@@ -40,9 +35,20 @@ For reference, this component's structure and functionality is almost the exact 
 				padding: 20px;
 			}
 
-			#saveButton {
-				background-color: var(--secondary-color);
-				color: #fff;
+			.cancel {
+				background-color: #fff;
+				color: var(--primary-text);
+			}
+
+
+			@media (max-width: 599px) {
+				paper-dialog {
+					width: 100vw;
+				}
+
+				.detail {
+					width: 80%;
+				}
 			}
 		</style>
 
@@ -54,7 +60,7 @@ For reference, this component's structure and functionality is almost the exact 
 			<h2>Edit Event</h2>
 			<paper-input
 				autofocus
-				class="short-detail"
+				class="detail"
 				label="Title"
 				required
 				auto-validate
@@ -63,16 +69,25 @@ For reference, this component's structure and functionality is almost the exact 
 				invalid="{{validTitle}}">
 			</paper-input>
 			<paper-input
-				class="short-detail"
+				class="detail"
 				label="Type of Event"
 				required
 				auto-validate
 				error-message="Required"
 				value="{{eventType}}"
-				invalid="{{validType}}">
+				invalid="{{validType}}"
+				list="edittypes">
 			</paper-input>
+			<datalist id="edittypes">
+				<option value="Party"></option>
+				<option value="Rave"></option>
+				<option value="Picnic"></option>
+				<option value="Hackathon"></option>
+				<option value="Competition"></option>
+				<option value="Study Session"></option>
+			</datalist>
 			<paper-input
-				class="short-detail"
+				class="detail"
 				label="Host"
 				required
 				auto-validate
@@ -81,16 +96,17 @@ For reference, this component's structure and functionality is almost the exact 
 				invalid="{{validHost}}">
 			</paper-input>
 			<paper-input
-				class="short-detail"
+				class="detail"
 				label="Location"
 				required
 				auto-validate
+				autocomplete="street-address"
 				error-message="Required"
 				value="{{eventLocation}}"
 				invalid="{{validLocation}}">
 			</paper-input>
 			<paper-input
-				class="long-detail"
+				class="detail"
 				label="Start"
 				required
 				auto-validate
@@ -99,16 +115,17 @@ For reference, this component's structure and functionality is almost the exact 
 				invalid="{{validStart}}">
 			</paper-input>
 			<paper-input
-				class="long-detail"
+				class="detail"
 				label="End"
 				required
 				auto-validate
 				error-message="Required"
 				value="{{eventEnd}}"
-				invalid="{{validEnd}}">
+				invalid="{{validEnd}}"
+				min="[[eventStart]]">
 			</paper-input>
 			<paper-textarea
-				class="long-detail"
+				class="detail"
 				label="Guest List"
 				required
 				auto-validate
@@ -116,20 +133,20 @@ For reference, this component's structure and functionality is almost the exact 
 				value="{{eventGuests}}">
 			</paper-textarea>
 			<paper-input
-				class="long-detail"
+				class="detail"
 				label="Image URL (optional)"
 				value="{{eventImage}}">
 			</paper-input>
 			<paper-textarea
-				class="long-detail"
+				class="detail"
 				label="Extra Info (optional)"
 				value="{{eventInfo}}">
 			</paper-textarea>
 			<div class="padded">
 				<paper-icon-button id="deleteButton" icon="delete" on-tap="deleteEvent" alt="Delete Event"></paper-icon-button>
 				<paper-tooltip for="deleteButton">Delete Event</paper-tooltip>
-				<paper-button raised on-tap="close">Cancel</paper-button>
-				<paper-button id="saveButton" raised disabled$="[[!formValid]]" on-tap="saveEvent">Save</paper-button>
+				<paper-button class="cancel" raised on-tap="close">Cancel</paper-button>
+				<paper-button raised disabled$="[[!formValid]]" on-tap="saveEvent">Save</paper-button>
 			</div>
 		</paper-dialog>
 	</template>
